can-socket/tests/compile-fail/id_too_high3.rs
fn main() {
	let _id = can_socket::can_id!(extended: 0x2000_0000);
}
